--- a/dailyshop/src/main/resources/application.properties
+++ b/dailyshop/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.jpa.database=mysql
+spring.datasource.platform=mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/dailyshop
+spring.datasource.username=root
+spring.datasource.password=MySQL215
