--- a/dailyshop/src/main/resources/application.properties
+++ b/dailyshop/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.platform=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/dailyshop
 spring.datasource.username=root
 spring.datasource.password=MySQL215
+
+logging.file.name=dailyshop.log
