--- a/dailyshop/src/main/resources/application.properties
+++ b/dailyshop/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# Mysql database connection details
 spring.jpa.database=mysql
 spring.datasource.platform=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/dailyshop
